<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/weight_name"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/weight_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weight_text"/>

    <EditText
        android:id="@+id/weight_text"
        android:layout_width="254dp"
        android:layout_height="30dp"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/weight_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/height_name"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/height_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_name"
        app:layout_constraintEnd_toStartOf="@id/height_text"
        />

    <EditText
        android:id="@+id/height_text"
        android:layout_width="254dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/height_name"
        app:layout_constraintTop_toBottomOf="@id/weight_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/gender_option_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_male_name"

            />

        <RadioButton
            android:id="@+id/gender_option_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_female_name" />

    </RadioGroup>

    <TextView
        android:id="@+id/textError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_gender"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        />
    


    <Button
        android:id="@+id/calc_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>